<resources>
    <string name="app_name">constraintlayout</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>
    <string name="btn3">btn3</string>
    <string name="btn4">btn4</string>
    <string name="btn5">btn5</string>
    <string name="btn6">btn6</string>
    <string name="btn_tab">btn_tab</string>
    <string name="text">text</string>
</resources>
