<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_tab"
        style="@style/btn"
        android:text="@string/btn_tab"/>

   <Button
       android:id="@+id/btn1"
       app:layout_constraintTop_toBottomOf="@id/btn_tab"
       style="@style/btn"
       android:text="@string/btn1"/>
    <Button
        android:id="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        style="@style/btn"
        android:text="@string/btn2"/>
    <Button
        android:id="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        style="@style/btn"
        android:text="@string/btn3"/>
    <Button
        android:id="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        style="@style/btn"
        android:text="@string/btn4"/>
    <Button
        android:id="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        style="@style/btn"
        android:text="@string/btn5"/>
    <Button
        android:id="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        style="@style/btn"
        android:text="@string/btn6"/>

</android.support.constraint.ConstraintLayout>