<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <TextView
        android:id="@+id/a"
        style="@style/text"
        android:text="@string/a"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <TextView
        android:id="@+id/b"
        style="@style/text"
        android:text="@string/b"
        app:layout_constraintLeft_toRightOf="@id/a"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <TextView
        android:id="@+id/c"
        style="@style/text"
        android:text="@string/c"
        app:layout_constraintLeft_toRightOf="@id/b"
        app:layout_constraintTop_toTopOf="@id/guideline" />
</android.support.constraint.ConstraintLayout>