<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="10dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="40dp" />

            <TextView
                android:id="@+id/tx1"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tx2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tx2"
                style="@style/text2"
                android:text="@string/btn1"/>
            <TextView
                android:id="@+id/tx2"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintLeft_toRightOf="@id/tx1"
                app:layout_constraintRight_toLeftOf="@id/tx3"
                app:layout_constraintStart_toEndOf="@id/tx1"
                app:layout_constraintEnd_toStartOf="@id/tx3"
                style="@style/text2"
                android:text="@string/btn2"/>
            <TextView
                android:id="@+id/tx3"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintLeft_toRightOf="@id/tx2"
                app:layout_constraintRight_toLeftOf="@id/tx4"
                app:layout_constraintStart_toEndOf="@id/tx2"
                app:layout_constraintEnd_toStartOf="@id/tx4"
                style="@style/text2"
                android:text="@string/btn3"/>
            <TextView
                android:id="@+id/tx4"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintLeft_toRightOf="@id/tx3"
                app:layout_constraintRight_toLeftOf="@id/tx5"
                app:layout_constraintStart_toEndOf="@id/tx3"
                app:layout_constraintEnd_toStartOf="@id/tx5"
                style="@style/text2"
                android:text="@string/btn4"/>
            <TextView
                android:id="@+id/tx5"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintLeft_toRightOf="@id/tx4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/tx4"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/text2"
                android:text="@string/btn5"/>
            <View
                android:id="@+id/view1"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/tx1"
                app:layout_constraintStart_toStartOf="@id/tx1"
                app:layout_constraintEnd_toEndOf="@id/tx1"
                style="@style/short_line" />
            <View
                android:id="@+id/view2"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tx2"
                app:layout_constraintStart_toStartOf="@id/tx2"
                app:layout_constraintEnd_toEndOf="@id/tx2"
                style="@style/short_line" />
            <View
                android:id="@+id/view3"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tx3"
                app:layout_constraintStart_toStartOf="@id/tx3"
                app:layout_constraintEnd_toEndOf="@id/tx3"
                style="@style/short_line"  />
            <View
                android:id="@+id/view4"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tx4"
                app:layout_constraintStart_toStartOf="@id/tx4"
                app:layout_constraintEnd_toEndOf="@id/tx4"
                style="@style/short_line"  />
            <View
                android:id="@+id/view5"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tx5"
                app:layout_constraintStart_toStartOf="@id/tx5"
                app:layout_constraintEnd_toEndOf="@id/tx5"
                style="@style/short_line"  />
            <View
                android:id="@+id/view6"
                app:layout_constraintTop_toBottomOf="@id/guideline1"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/vp1"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>
    </LinearLayout>